--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
     {
       "name": "master_interface_flutter",
       "request": "launch",
-      "type": "dart"
+      "type": "dart",
+      "args": ["--web-hostname", "127.0.0.1", "--web-port", "8080"]
     },
     {
       "name": "master_interface_flutter (profile mode)",
